--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       </style>
 
 
-      <script async defer type="text/javascript" src="mapapi0.js"></script>
+      <script async defer type="text/javascript" src="mapapi.js"></script>
 
       <div class ="centerText">
           <center>
@@ -56,8 +56,47 @@
         </div>
           <div id="map-canvas"></div>
     </div>
-    <div class="tabPanel">Tab 3:Content</div>
-    <div class="tabPanel">Tab 4:Content</div>
+    <div class="tabPanel">
+      <style type="text/css">
+        html { height: auto; }
+        body { height: auto; margin: 0; padding: 0 }
+        #infobox { margin: 0px }
+        #map-canvas { height: 460px }
+      </style>
+
+
+      <script async defer type="text/javascript" src="mapapi.js"></script>
+
+      <div class ="centerText">
+          <center>
+          <p>Come take a look at my favorite places in West Chester!</p>
+          <p>Fun with Google Maps API <font size="3"><a href="https://github.com/rmcgarry3/FavWCPlaces" target="blank">(Source Code Here)</a></font></p>
+          </center>
+        </div>
+          <div id="map-canvas"></div>
+
+
+    </div>
+    <div class="tabPanel">
+      <style type="text/css">
+        html { height: auto; }
+        body { height: auto; margin: 0; padding: 0 }
+        #infobox { margin: 0px }
+        #map-canvas { height: 460px }
+      </style>
+
+
+      <script async defer type="text/javascript" src="mapapi0.js"></script>
+
+      <div class ="centerText">
+          <center>
+          <p>Come take a look at my favorite places in West Chester!</p>
+          <p>Fun with Google Maps API <font size="3"><a href="https://github.com/rmcgarry3/FavWCPlaces" target="blank">(Source Code Here)</a></font></p>
+          </center>
+        </div>
+          <div id="map-canvas1"></div>
+
+    </div>
 </div>
 <script src="myScript.js"></script>
 
