--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       <div class ="centerText">
           <center>
           <p>Come take a look at my favorite places in West Chester!</p>
-          <p>Fun with Google Maps API <font size="3"><a href="https://github.com/rmcgarry3/FavWCPlaces" target="blank">(Source Code Here)</a></font></p>
+          <p>Fun with Google Maps API <font size="3"><a href="https://github.com/rmcg3/FavWCPlaces" target="blank">(Source Code Here)</a></font></p>
           </center>
         </div>
           <div id="map-canvas"></div>
@@ -70,7 +70,7 @@
       <div class ="centerText">
           <center>
           <p>Come take a look at my favorite places in West Chester!</p>
-          <p>Fun with Google Maps API <font size="3"><a href="https://github.com/rmcgarry3/FavWCPlaces" target="blank">(Source Code Here)</a></font></p>
+          <p>Fun with Google Maps API <font size="3"><a href="https://github.com/rmcg3/FavWCPlaces" target="blank">(Source Code Here)</a></font></p>
           </center>
         </div>
           <div id="map-canvas"></div>
@@ -91,7 +91,7 @@
       <div class ="centerText">
           <center>
           <p>Come take a look at my favorite places in West Chester!</p>
-          <p>Fun with Google Maps API <font size="3"><a href="https://github.com/rmcgarry3/FavWCPlaces" target="blank">(Source Code Here)</a></font></p>
+          <p>Fun with Google Maps API <font size="3"><a href="https://github.com/rmcg3/FavWCPlaces" target="blank">(Source Code Here)</a></font></p>
           </center>
         </div>
           <div id="map-canvas1"></div>
