add directions to index.html

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
       		<center>
           <p>Come take a look at my favorite places in West Chester!</p>
       		<p>Fun with Google Maps API <font size="3"><a href="https://github.com/rmcgarry3/FavWCPlaces" target="blank">(Source Code Here)</a></font></p>
+          <p>Click on a marker to explore!</p>
           <div id="map-canvas"></div>
       		</center>
         </div>
@@ -56,6 +57,7 @@
           <center>
           <p>Come take a look at my favorite places in West Chester!</p>
           <p>Fun with Google Maps API <font size="3"><a href="https://github.com/rmcg3/FavWCPlaces" target="blank">(Source Code Here)</a></font></p>
+          <p>Click on a marker to explore!</p>
           <div id="map-canvas0"></div>
           </center>
         </div>
@@ -79,6 +81,7 @@
           <center>
           <p>Come take a look at my favorite places in West Chester!</p>
           <p>Fun with Google Maps API <font size="3"><a href="https://github.com/rmcg3/FavWCPlaces" target="blank">(Source Code Here)</a></font></p>
+          <p>Click on a marker to explore!</p>
           <div id="map-canvas1"></div>
           </center>
         </div>
@@ -103,6 +106,7 @@
           <center>
           <p>Come take a look at my favorite places in West Chester!</p>
           <p>Fun with Google Maps API <font size="3"><a href="https://github.com/rmcg3/FavWCPlaces" target="blank">(Source Code Here)</a></font></p>
+          <p>Click on a marker to explore!</p>
           <div id="map-canvas2"></div>
           </center>
         </div>
